manifests/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  annotations:
    ignore-check.kube-linter.io/no-rolling-update-strategy: "Using Recreate strategy to avoid issues with ReadWriteOnce volumes"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      restartPolicy: Always
      containers:
        - name: radarr
          image: ghcr.io/home-operations/radarr:6.4.3@sha256:0ebb4ae26ee9522674a4ad1855e926fd6b97c534ff982644c9c9a87bca740077
          ports:
            - containerPort: 7878
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
            - name: media
              mountPath: /media
          livenessProbe:
            tcpSocket:
              port: 7878
          readinessProbe:
            tcpSocket:
              port: 7878
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: tmp
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media
